# VoxelCraft

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  VAO.cpp  VoxelCraft.sln  VoxelCraft.vcxproj  VoxelCraft.vcxproj.filters  main.cpp  mesh.cpp  mesh.h  texture.cpp  texture.h
buffers/include/: EBO.h  VAO.h  VBO.h
buffers/src/: EBO.cpp  VAO.cpp  VBO.cpp
camera/include/: camera.h
camera/src/: camera.cpp
include/: Camera.h
include/core/: Config.h  Core.h  Window.h
include/gfx/: EBO.h  Mesh.h  Model.h  Texture.h  VBO.h
resources/shaders/: default.frag  default.vert  light.vert
shader/src/: Shader.cpp
shaders/include/: shaderClass.h
shaders/src/: shaderClass.cpp
src/: Camera.cpp  Main.cpp
src/core/: Window.cpp
src/gfx/: EBO.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp
